--- a/test.html
+++ b/test.html
@@ -1,3 +1,15 @@
-<h1>Hey.I'am a big heading</h1>
-<p>Hey. I'am a paragraph element. Cool huh?</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I am a link!</a>
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey.I'am a big heading</h1>
+	<p>Hey. I'am a <b>paragraph</b> element. Cool huh?</p>
+	<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I am a link!</a>
+	<p>Ginshen Impact:<br>
+	Woohoo</p>
+	<img src="https://img.knowll.com/images/2020/05/04/genshin-impact-knowll-game-guide.jpg">
+</body>
+</html>
