create a new index html file

--- a/test.html
+++ b/test.html
@@ -10,6 +10,6 @@
 	<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I am a link!</a>
 	<p>Ginshen Impact:<br>
 	Woohoo</p>
-	<img src="https://img.knowll.com/images/2020/05/04/genshin-impact-knowll-game-guide.jpg">
+	<img src="https://media.comicbook.com/2016/05/scarlet-witch-olsen-181450-1280x0.jpg">
 </body>
 </html>
