--- a/styletest.html
+++ b/styletest.html
@@ -8,8 +8,8 @@
 	<span>Span element</span>
 <h1 class="big"><span>Heading 1</span>-1</h1>
 <h1 class="uppercase">Heading 1-2</h1>
-<h1 class="big">Heading 1-3</h1>
-<h2 class="uppercase big">Heading 2-1</h2>
+<h1 class="uppercase">Heading 1-3</h1>
+<h2 class="big uppercase">Heading 2-1</h2>
 <h2 class="uppercase">Heading 2-2</h2>
 <h2 class="big">Heading 2-3</h2>
 
