--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>Scarlet Witch</title>
+	<link rel="icon" href="scarletwitch2.jpg">
 </head>
 <body>
-	<!-- header element -->
+	<!-- header element (Command and / to get this for the second time, still have to write for the first time)-->
  	<header>
 		<img src="scarletwitch2.jpg">
 		<h1>Scarlet Witch (Wanda Maximoff)</h1>
@@ -30,9 +31,9 @@
 		all know is his twin younger brother QuickSilver. Click on the links below to read more
 		about them:</p>
 		<ul>
-			<li><a href="https://marvelcinematicuniverse.fandom.com/wiki/Quicksilver">QuickSilver</a> </li>
-			<li><a href="https://en.wikipedia.org/wiki/Magneto_(Marvel_Comics)">Magneto</a> </li>
-			<li><a href="https://marvel.fandom.com/wiki/Magda_Eisenhardt_(Earth-616)">Magda Eisenhardt</a></li>
+			<li><a target="blank" href="https://marvelcinematicuniverse.fandom.com/wiki/Quicksilver">QuickSilver</a> </li>
+			<li><a target="blank" href="https://en.wikipedia.org/wiki/Magneto_(Marvel_Comics)">Magneto</a> </li>
+			<li><a target="blank" href="https://marvel.fandom.com/wiki/Magda_Eisenhardt_(Earth-616)">Magda Eisenhardt</a></li>
 		</ul>
 	</main>
 
