add a css file for the webpage/ addin fonts, colors and edit the size of some images

--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html>
 <head>
 	<title>Scarlet Witch</title>
+<!-- create favicon - tab icon -->
 	<link rel="icon" href="scarletwitch2.jpg">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	<link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 	<!-- header element (Command and / to get this for the second time, still have to write for the first time)-->
  	<header>
 		<img src="scarletwitch2.jpg">
-		<h1>Scarlet Witch (Wanda Maximoff)</h1>
+		<h1>Wanda Maximoff</h1>
 	</header>
 
 	<!-- main element -->
@@ -25,7 +31,7 @@
 			<li>She was originally a super-villain</li>
 			<li>She got herself into a tragedy in an attempt to have a family with Vision</li>
 		</ol>
-		<!-- Family -->
+		<!-- Family (target blank to click the link the new tab) -->
 		<h2>Scarlet's family</h2>
 		<p>There are a lot of rumors about who is his father. But one thing for sure that we 
 		all know is his twin younger brother QuickSilver. Click on the links below to read more
