--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<p>I used to think of myself one way. But, after this... I am something else. And still me, I think. 
 		But that's not what everyone else sees</p>
 		<img src="https://media.comicbook.com/2016/05/scarlet-witch-olsen-181450-1280x0.jpg">
-		<p>Scarlet Witch played by Elizabeth Olsen</p>
+		<p class="caption">Scarlet Witch played by Elizabeth Olsen</p>
 		<!-- Facts -->
 		<h2>Facts about Scarlet Witch</h2>
 		<ol>
@@ -45,7 +45,8 @@
 
 	<!-- Footer element -->
 	<footer>
-		<p>This site was created during my studying time. &copy; Nicolas</p>
+		<!-- how to embed a link to the word tap tap kaboom -->
+		<p>This site was created during a <a href="https://taptapkaboom.com">Tap Tap Kaboom</a> time. &copy; Nicolas</p>
 	</footer>
 </body>
 </html>
